--- a/registration/registration-fee.html
+++ b/registration/registration-fee.html
@@ -86,9 +86,9 @@
                                         </ul>
                                     </li> 
                                     <li>
-                                        <a href="course-list.html">EXAM SHEDULE</a>
+                                        <a href="course-list.html">EXAM SCHEDULE</a>
                                         <ul class="submenu">
-                                            <li><a href="/">Shedule</a></li>
+                                            <li><a href="/">Schedule</a></li>
                                             <li><a href="/">NBSE Admit Card </a></li>
                                             <li><a href="/">Marking Scheme</a></li>
                                             <li><a href="/">NBSE Sample Paper</a></li>
@@ -235,7 +235,7 @@
                                                 <a href="#">Registration</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1282">
-                                                <a href="#">Exam Shedule</a>
+                                                <a href="#">EXAM SCHEDULE</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1283">
                                                 <a href="#">Result</a>
