--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                         </ul>
                                     </li> 
                                     <li>
-                                        <a href="course-list.html">EXAM SHEDULE</a>
+                                        <a href="#">EXAM SCHEDULE</a>
                                         <ul class="submenu">
-                                                <li><a href="exam-shedule/exam-shedule.html">Shedule</a></li>
+                                                <li><a href="exam-shedule/exam-shedule.html">Schedule</a></li>
                                             <li><a href="/">NBSE Admit Card </a></li>
                                             <li><a href="/">Marking Scheme</a></li>
                                             <li><a href="/">NBSE Sample Paper</a></li>
@@ -128,7 +128,7 @@
                         </div>
                         
                         <div class="tp-caption sfl desc-slide center color-white v1" data-x="0" data-y="130" data-speed="800" data-start="1500" data-easing="Expo.easeIn">
-                            <div class="title">NBSE <br>New Registration</div>
+                            <div class="title">Are you Ready <br>with Board Exams?</div>
                         </div>
 
                         <!-- <div class="tp-caption sfr desc-slide center color-white v2" data-x="0" data-y="320" data-speed="800" data-start="1900" data-easing="Expo.easeIn">
@@ -147,7 +147,7 @@
                         </div>
 
                         <div class="tp-caption sft desc-slide center color-white v1 color-style" data-x="500" data-y="190" data-speed="1000" data-start="1000" data-easing="Quad.easeInOut">
-                            <div class="title v1">Exam Shedule</div>
+                            <div class="title v1">Overcome Your <br> Board Fear?</div>
                         </div>
 
                        <!--  <div class="tp-caption sft desc-slide center color-white v2" data-x="120" data-y="300" data-speed="1000" data-start="1900" data-easing="Sine.easeInOut">
@@ -276,7 +276,7 @@
                                                 <a href="#">Registration</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1282">
-                                                <a href="#">Exam Shedule</a>
+                                                <a href="#">EXAM SCHEDULE</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1283">
                                                 <a href="#">Result</a>
