--- a/registration/registration-fee.html
+++ b/registration/registration-fee.html
@@ -30,7 +30,7 @@
     <!-- Favicon and touch icons  -->
     <link href="icon/apple-touch-icon-48-precomposed.png" rel="apple-touch-icon-precomposed" sizes="48x48">
     <link href="icon/apple-touch-icon-32-precomposed.png" rel="apple-touch-icon-precomposed">
-    <link href="#" rel="shortcut icon">
+    <link href="../assets/logo.ico" rel="shortcut icon">
 
     <!--[if lt IE 9]>
         <script src="javascript/html5shiv.js"></script>
@@ -56,8 +56,8 @@
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="../index.html" rel="home">
-                                <!-- <img src="../images/logo.png" alt="image"> -->
-                                <h1 style="color: white;">NBSE</h1>
+                                <img src="../assets/NBSE LOGO 2.png" alt="image">
+                                
                             </a>
                         </div><!-- /.logo -->
 
@@ -88,7 +88,7 @@
                                     <li>
                                         <a href="course-list.html">EXAM SCHEDULE</a>
                                         <ul class="submenu">
-                                            <li><a href="/">Schedule</a></li>
+                                            <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
                                             <li><a href="/">NBSE Admit Card </a></li>
                                             <li><a href="/">Marking Scheme</a></li>
                                             <li><a href="/">NBSE Sample Paper</a></li>
@@ -141,10 +141,10 @@
                                         <table class="table table-bordered table-striped">
                                                 <thead style="background: #063aa2;color: white;">
                                                     <tr>
-                                                    <th>Subject Code</th>
-                                                    <th>Subjects</th>
-                                                    <th>Class IX</th>
-                                                    <th>Class X</th>
+                                                    <th style="width: 10%">Subject Code</th>
+                                                    <th style="width: 20%">Subjects</th>
+                                                    <th style="width: 10%">Class IX</th>
+                                                    <th style="width: 10%">Class X</th>
 
                                                     </tr>
                                                 </thead>
@@ -225,7 +225,9 @@
                         <div class="row normal-sidebar">
                           <div class="col-md-6  widget widget-nav-menu">
                                 <div class=" widget-inner">
-                                    <h2 class="widget-title maincolor1">NBSE</h2>
+                                    <h2 class="widget-title maincolor1">
+                                            <img src="../assets/NBSE LOGO 2.png" alt="image">
+                                    </h2>
                                     <div class="menu-law-business-container">
                                         <ul id="menu-law-business" class="menu">
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1280">
