--- a/about/subject.html
+++ b/about/subject.html
@@ -30,7 +30,7 @@
     <!-- Favicon and touch icons  -->
     <link href="icon/apple-touch-icon-48-precomposed.png" rel="apple-touch-icon-precomposed" sizes="48x48">
     <link href="icon/apple-touch-icon-32-precomposed.png" rel="apple-touch-icon-precomposed">
-    <link href="#" rel="shortcut icon">
+    <link href="../assets/logo.ico" rel="shortcut icon">
 
     <!--[if lt IE 9]>
         <script src="javascript/html5shiv.js"></script>
@@ -56,8 +56,7 @@
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="../index.html" rel="home">
-                               <!--  <img src="../images/logo.png" alt="image"> -->
-                               <h1 style="color: white;">NBSE</h1>
+                                <img src="../assets/NBSE LOGO 2.png" />
                             </a>
                         </div><!-- /.logo -->
                         
@@ -81,14 +80,14 @@
                                         <ul class="submenu">
                                            <li><a href="/">New Student Registration</a></li>
                                             <li><a href="/">School Registration</a></li>
-                                            <li><a href="/">Registration Fees</a></li>
+                                            <li><a href="../registration/registration-fee.html">Registration Fees</a></li>
                                             <li><a href="/">Student Registration Form</a></li>
                                         </ul>
                                     </li> 
                                     <li>
                                         <a href="course-list.html">EXAM SCHEDULE</a>
                                         <ul class="submenu">
-                                            <li><a href="/">Schedule</a></li>
+                                            <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
                                             <li><a href="/">NBSE Admit Card </a></li>
                                             <li><a href="/">Marking Scheme</a></li>
                                             <li><a href="/">NBSE Sample Paper</a></li>
@@ -262,7 +261,9 @@
                         <div class="row normal-sidebar">
                           <div class="col-md-6  widget widget-nav-menu">
                                 <div class=" widget-inner">
-                                    <h2 class="widget-title maincolor1">NBSE</h2>
+                                    <h2 class="widget-title maincolor1">
+                                            <img src="../assets/NBSE LOGO 2.png" />
+                                    </h2>
                                     <div class="menu-law-business-container">
                                         <ul id="menu-law-business" class="menu">
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1280">
