--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Favicon and touch icons  -->
     <link href="icon/apple-touch-icon-48-precomposed.png" rel="apple-touch-icon-precomposed" sizes="48x48">
     <link href="icon/apple-touch-icon-32-precomposed.png" rel="apple-touch-icon-precomposed">
-    <link href="#" rel="shortcut icon">
+    <link href="assets/logo.ico" rel="shortcut icon">
 
     <!--[if lt IE 9]>
         <script src="javascript/html5shiv.js"></script>
@@ -56,7 +56,8 @@
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="index.html" rel="home">
-                               <h1 style="color: white;">NBSE</h1>
+                                <img src="assets/NBSE LOGO 2.png" />
+                               <!-- <h1 style="color: white;">NBSE</h1> -->
                             </a>
                         </div><!-- /.logo -->
 
@@ -266,7 +267,9 @@
                         <div class="row normal-sidebar">
                           <div class="col-md-6  widget widget-nav-menu">
                                 <div class=" widget-inner">
-                                    <h2 class="widget-title maincolor1">NBSE</h2>
+                                    <h2 class="widget-title maincolor1">
+                                        <img src="assets/NBSE LOGO 2.png" />
+                                    </h2>
                                     <div class="menu-law-business-container">
                                         <ul id="menu-law-business" class="menu">
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1280">
