--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                                     <li>
                                         <a href="/">REGISTRATION</a>
                                         <ul class="submenu">
-                                           <li><a href="/">New Student Registration</a></li>
+                                           <li><a href="http://nbse.org.in/nbse_admin/">New Student Registration</a></li>
                                             <li><a href="/">School Registration</a></li>
                                             <li><a href="registration/registration-fee.html">Registration Fees</a></li>
                                             <li><a href="/">Student Registration Form</a></li>
                                         </ul>
-                                    </li> 
+                                    </ul> 
                                     <li>
                                         <a href="#">EXAM SCHEDULE</a>
                                         <ul class="submenu">
@@ -111,6 +111,9 @@
                                            <li><a href="/">Awards and Recoginition</a></li>
                                            <li><a href="/">Award Ceremony Pics</a></li>
                                         </ul>
+                                    </li>
+                                    <li>
+                                        <a href="contact/contact-us.html">Contact Us</a>
                                     </li>                                    
                                 </ul>
                             </nav>
@@ -294,7 +297,7 @@
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer_contain">
-                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.364260832361!2d77.24176541508292!3d28.648809982411482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd209d24a4d5%3A0x773dd6306827a7e5!2sOrange+Education+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1565400628888!5m2!1sen!2sin" style="border:0" allowfullscreen="" height="200" frameborder="0" width="100%"></iframe>
+                                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3501.4907855340457!2d77.240987!3d28.64502!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfcdf0d75e223%3A0x6eef81c69ba8f205!2sDaryaganj%2C%20New%20Delhi%2C%20Delhi%20110002!5e0!3m2!1sen!2sin!4v1569470567570!5m2!1sen!2sin" style="border:0" allowfullscreen="" height="200" frameborder="0" width="100%"></iframe>
                               </div>
                             </div>
 
