--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <li>
                                         <a href="/">REGISTRATION</a>
                                         <ul class="submenu">
-                                           <li><a href="http://nbse.org.in/nbse_admin/">New Student Registration</a></li>
+                                           <li><a href="assets/PARENT CIRCULAR (4 pgs).pdf" target="_blank">New Student Registration</a></li>
                                             <li><a href="/">School Registration</a></li>
                                             <li><a href="registration/registration-fee.html">Registration Fees</a></li>
                                             <li><a href="/">Student Registration Form</a></li>
@@ -91,7 +91,7 @@
                                                 <li><a href="exam-shedule/exam-shedule.html">Schedule</a></li>
                                             <li><a href="/">NBSE Admit Card </a></li>
                                             <li><a href="/">Marking Scheme</a></li>
-                                            <li><a href="/">NBSE Sample Paper</a></li>
+                                            <li><a href="exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
                                             <li><a href="/">CBSE Sample Papers 2019</a></li>
                                         </ul>
                                     </li>                                
