--- a/about/about-nbse.html
+++ b/about/about-nbse.html
@@ -56,67 +56,70 @@
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="../index.html" rel="home">
-                                <img src="../assets/NBSE LOGO 2.png" />
+                               <!--  <img src="../assets/NBSE LOGO 2.png" /> -->
+                               <h1 id="logo-text" >NBSE&#x2122;</h1>
                             </a>
                         </div><!-- /.logo -->
 
 
                         <div class="nav-wrap">
 
-                            <nav id="mainnav" class="mainnav">
-                                <ul class="menu"> 
-                                    <li class="home">
-                                        <a href="/">ABOUT US</a>
-                                        <ul class="submenu">
-                                            <li><a href="about-nbse.html">NBSE</a></li>
-                                            <li><a href="advisory-commeti.html">Advisory Committee</a></li>
-                                            <li><a href="importance-of-nbse.html">Importance of NBSE</a></li>
-                                            <li><a href="subject.html">Subjects</a></li>
-                                          
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="/">REGISTRATION</a>
-                                        <ul class="submenu">
-                                           <li><a href="http://nbse.org.in/nbse_admin/">New Student Registration</a></li>
-                                            <li><a href="/">School Registration</a></li>
-                                            <li><a href="../registration/registration-fee.html">Registration Fees</a></li>
-                                            <li><a href="/">Student Registration Form</a></li>
-                                        </ul>
-                                    </li> 
-                                    <li>
-                                        <a href="course-list.html">EXAM SCHEDULE</a>
-                                        <ul class="submenu">
-                                            <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
-                                            <li><a href="/">NBSE Admit Card </a></li>
-                                            <li><a href="/">Marking Scheme</a></li>
-                                            <li><a href="/">NBSE Sample Paper</a></li>
-                                            <li><a href="/">CBSE Sample Papers 2019</a></li>
-                                        </ul>
-                                    </li>                                
-                                    <li>
-                                        <a href="">RESULT</a>
-                                        <ul class="submenu">
-                                            <li><a href="/">Result</a></li>
-                                            <li><a href="/">NBSE Marksheet</a></li>
-                                            <li><a href="/">Re-Verification</a></li>
-                                            <li><a href="/">Re-Evaluation</a></li>
-                                            <li><a href="/">NBSE Topper Answer Sheet</a></li>
-                                        </ul>
-                                    </li> 
-                                    <li>
-                                        <a href="#">NBSE WINNERS</a>
-                                        <ul class="submenu">
-                                           <li><a href="/">Awards and Recoginition</a></li>
-                                           <li><a href="/">Award Ceremony Pics</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="../contact/contact-us.html">Contact Us</a>
-                                    </li>                                       
-                                </ul>
-                            </nav>
-                        </div>
+                                <nav id="mainnav" class="mainnav">
+                                    <ul class="menu"> 
+                                        <li class="home">
+                                            <a href="/">ABOUT US</a>
+                                            <ul class="submenu">
+                                                <li><a href="about-nbse.html">NBSE</a></li>
+                                                <li><a href="advisory-commeti.html">Advisory Committee</a></li>
+                                                <li><a href="importance-of-nbse.html">Importance of NBSE</a></li>
+                                                <li><a href="subject.html">Subjects</a></li>
+                                              
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="/">REGISTRATION</a>
+                                            <ul class="submenu">
+                                               <li><a href="http://www.nbse.org.in/nbse_admin/" target="_blank">New Student Registration</a></li>
+                                                <li><a href="/">School Registration</a></li>
+                                                <li><a href="../registration/registration-fee.html">Registration Fees</a></li>
+                                                <li><a href="../assets/PARENT CIRCULAR (4 pgs).pdf" target="_blank">Student Registration Form</a></li>
+                                                <li><a href="/">Additional Subject</a></li>
+                                            </ul>
+                                        </li> 
+                                        <li>
+                                            <a href="#">EXAM SCHEDULE</a>
+                                            <ul class="submenu">
+                                                <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
+                                                <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf">NBSE Admit Card </a></li>
+                                                <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf">NBSE Marksheet</a></li>
+                                                <li><a href="../exam-shedule/marking-scheme.html">Marking Scheme</a></li>
+                                                <li><a href="../exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
+                                                <li><a href="/">CBSE Sample Papers 2019</a></li>
+                                            </ul>
+                                        </li>                                
+                                        <li>
+                                            <a href="">RESULT</a>
+                                            <ul class="submenu">
+                                                <li><a href="/">Result</a></li>
+                                                <li><a href="/">Re-Verification</a></li>
+                                                <li><a href="/">Re-Evaluation</a></li>
+                                                <li><a href="/">NBSE Topper Answer Sheet</a></li>
+                                            </ul>
+                                        </li> 
+                                        <li>
+                                            <a href="#">NBSE WINNERS</a>
+                                            <ul class="submenu">
+                                               <li><a href="/">Awards and Recoginition</a></li>
+                                               <li><a href="/">Award Ceremony Pics</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="../contact/contact-us.html">Contact Us</a>
+                                        </li>                                    
+                                    </ul>
+                                </nav>
+                            </div>
+
                     </div>
                     </div><!-- /.header-wrap -->
                 </div><!-- /.container-->
@@ -161,7 +164,8 @@
                           <div class="col-md-6  widget widget-nav-menu">
                                 <div class=" widget-inner">
                                     <h2 class="widget-title maincolor1">
-                                        <img src="../assets/NBSE LOGO 2.png" />
+                                       <!--  <img src="../assets/NBSE LOGO 2.png" /> -->
+                                       <h1 id="logo-text" >NBSE&#x2122;</h1>
                                     </h2>
                                     <div class="menu-law-business-container">
                                         <ul id="menu-law-business" class="menu">
