--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <li>
                                         <a href="/">REGISTRATION</a>
                                         <ul class="submenu">    
-                                           <li><a href="http://http://www.nbse.org.in/nbse_admin/" target="_blank">New Student Registration</a></li>
+                                           <li><a href="http://www.nbse.org.in/nbse_admin/" target="_blank">New Student Registration</a></li>
                                             <li><a href="/">School Registration</a></li>
                                             <li><a href="registration/registration-fee.html">Registration Fees</a></li>
                                             <li><a href="assets/PARENT CIRCULAR (4 pgs).pdf" target="_blank">Student Registration Form</a></li>
