--- a/exam-shedule/exam-shedule.html
+++ b/exam-shedule/exam-shedule.html
@@ -52,7 +52,7 @@
         <!-- Header -->
         <header id="header" class="header">
             <div class="header-wrap">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="../index.html" rel="home">
@@ -114,7 +114,14 @@
                                         </li>
                                         <li>
                                             <a href="../contact/contact-us.html">Contact Us</a>
-                                        </li>                                    
+                                        </li>
+                                        <li>
+                                                <a class="nav-link btn btn-white btn-white-outline mbr-editable-menu-item" 
+                                                href="../assets/nbse_android.apk" target="_blank">
+                                                <span style="padding: 5px;">
+                                                <img src="../assets/android.png" style="height: 20px;width: 20px;"/></span>
+                                                GET ON PLAY STORE</a>
+                                        </li>                                         
                                     </ul>
                                 </nav>
                             </div>
