--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                                         <a href="#">EXAM SCHEDULE</a>
                                         <ul class="submenu">
                                             <li><a href="exam-shedule/exam-shedule.html">Schedule</a></li>
-                                            <li><a href="assets/nbse-images/Admit Card (NBSE) (1).pdf">NBSE Admit Card </a></li>
-                                            <li><a href="assets/nbse-images/Marksheet (NBSE).pdf">NBSE Marksheet</a></li>
+                                            <li><a href="assets/nbse-images/Admit Card (NBSE) (1).pdf"target="_blank">NBSE Admit Card </a></li>
+                                            <li><a href="assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">NBSE Marksheet</a></li>
                                             <li><a href="exam-shedule/marking-scheme.html">Marking Scheme</a></li>
-                                            <li><a href="exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
-                                            <li><a href="/">CBSE Sample Papers 2019</a></li>
+                                            <li><a href="javascript:void(0)">NBSE Sample Paper</a></li>
+                                            <li><a href="exam-shedule/cbse-sample-paper.html">CBSE Sample Papers 2019</a></li>
                                         </ul>
                                     </li>                                
                                     <li>
@@ -208,7 +208,7 @@
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Hands-on Experience for CBSE Board Exams</a>
+                                        <a href="assets/PARENT CIRCULAR (4 pgs).pdf" target="_blank">New Student Registration</a>
                                     </div>
                                    <!--  <div class="box-content">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt lorem ipsum</p>
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Based on Latest CBSE Sample Papers</a>
+                                        <a href="exam-shedule/cbse-sample-paper.html" target="_blank">CBSE Sample Papers & Marking Scheme</a>
                                     </div>
                                    <!--  <div class="box-content">
                                         <p>ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
@@ -236,21 +236,33 @@
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Question Papers designed by CBSE Experts</a>
+                                        <a href="#">Topper's Answer Sheet (Student can download the marksheet after result declaration)</a>
                                     </div>
                                    <!--  <div class="box-content">
                                         <p>You can use this theme for university, training center, non-profit organization. There is no limits to University.</p>
                                     </div> -->
                                 </div>
                             </div><!-- /.iconbox -->
-
+                            <div class="iconbox left">                    
+                                <div class="box-header v6">
+                                    <i class="fa fa-star"></i>
+                                </div>
+                                <div class="icon-post">
+                                    <div class="box-title">
+                                        <a href="assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">Sample Marksheet with All India Rank (Student can download the Marksheet after result declaration)</a>
+                                    </div>
+                                   <!--  <div class="box-content">
+                                        <p>We provide free support for customers from Monday to Friday. Contact us for any issues you have</p>
+                                    </div> -->
+                                </div>
+                            </div><!-- /.iconbox -->
                             <div class="iconbox left">                    
                                 <div class="box-header v4">
                                     <i class="fa fa-shopping-cart"></i>
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Marksheet with All India Rank (subject-wise)</a>
+                                        <a href="#">Result (Result will be declared in 1st week of February)</a>
                                     </div>
                                     <!-- <div class="box-content">
                                         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
@@ -264,7 +276,7 @@
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Scholarships, Awards & Recognitions</a>
+                                        <a href="#">Scholarship and Awards</a>
                                     </div>
                                     <!-- <div class="box-content">
                                         <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur dignissimos</p>
@@ -272,19 +284,7 @@
                                 </div>
                             </div><!-- /.iconbox -->
 
-                            <div class="iconbox left">                    
-                                <div class="box-header v6">
-                                    <i class="fa fa-star"></i>
-                                </div>
-                                <div class="icon-post">
-                                    <div class="box-title">
-                                        <a href="#">Model Answer Sheet by NBSE Topper</a>
-                                    </div>
-                                   <!--  <div class="box-content">
-                                        <p>We provide free support for customers from Monday to Friday. Contact us for any issues you have</p>
-                                    </div> -->
-                                </div>
-                            </div><!-- /.iconbox -->
+                           
                         </div><!-- /flat-icon -->
                     </div>
                 </div>
