--- a/registration/registration-fee.html
+++ b/registration/registration-fee.html
@@ -89,11 +89,11 @@
                                             <a href="#">EXAM SCHEDULE</a>
                                             <ul class="submenu">
                                                 <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
-                                                <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf">NBSE Admit Card </a></li>
-                                                <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf">NBSE Marksheet</a></li>
+                                                <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf"target="_blank">NBSE Admit Card </a></li>
+                                                <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">NBSE Marksheet</a></li>
                                                 <li><a href="../exam-shedule/marking-scheme.html">Marking Scheme</a></li>
-                                                <li><a href="../exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
-                                                <li><a href="/">CBSE Sample Papers 2019</a></li>
+                                                <li><a href="javascript:void(0)">NBSE Sample Paper</a></li>
+                                                <li><a href="../exam-shedule/cbse-sample-paper.html">CBSE Sample Papers 2019</a></li>
                                             </ul>
                                         </li>                                
                                         <li>
