--- a/contact/contact-us.html
+++ b/contact/contact-us.html
@@ -87,13 +87,13 @@
                                             </ul>
                                         </li> 
                                         <li>
-                                            <a href="#">EXAM SCHEDULE</a>
+                                            <a href="../exam-shedule/exam-shedule.html">EXAM SCHEDULE</a>
                                             <ul class="submenu">
                                                 <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
                                                 <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf"target="_blank">NBSE Admit Card </a></li>
                                                 <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">NBSE Marksheet</a></li>
                                                 <li><a href="../exam-shedule/marking-scheme.html">Marking Scheme</a></li>
-                                                <li><a href="javascript:void(0)">NBSE Sample Paper</a></li>
+                                                <li><a href="../exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
                                                 <li><a href="../exam-shedule/cbse-sample-paper.html">CBSE Sample Papers 2019</a></li>
                                             </ul>
                                         </li>                                
@@ -109,12 +109,12 @@
                                         <li>
                                             <a href="#">NBSE WINNERS</a>
                                             <ul class="submenu">
-                                               <li><a href="/">Awards and Recoginition</a></li>
-                                               <li><a href="/">Award Ceremony Pics</a></li>
+                                               <li><a href="../nbse-winners/award-recognition.html">Awards and Recoginition</a></li>
+                                               <li><a href="../nbse-winners/award-cermoney.html">Award Ceremony Pics</a></li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="contact-us.html">Contact Us</a>
+                                            <a href="contact-us.html">CONTACT US</a>
                                         </li>                                        
                                     </ul>
                                 </nav>
@@ -255,13 +255,13 @@
                                     <div class="menu-law-business-container">
                                         <ul id="menu-law-business" class="menu">
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1280">
-                                                <a href="#">About US</a>
+                                                <a href="../about/about-nbse.html">About US</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1281">
-                                                <a href="#">Registration</a>
+                                                <a href="http://www.nbse.org.in/nbse_admin/" target="_blank">Registration</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1282">
-                                                <a href="#">EXAM SCHEDULE</a>
+                                                <a href="../exam-shedule/exam-shedule.html">EXAM SCHEDULE</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1283">
                                                 <a href="#">Result</a>
