--- a/about/about-nbse.html
+++ b/about/about-nbse.html
@@ -79,8 +79,8 @@
                                         <li>
                                             <a href="/">REGISTRATION</a>
                                             <ul class="submenu">
-                                               <li><a href="http://www.nbse.org.in/nbse_admin/" target="_blank">New Student Registration</a></li>
-                                                <li><a href="/">School Registration</a></li>
+                                               <li><a href="http://18.189.141.222:8080/nbse_admin/" target="_blank">New Student Registration</a></li>
+                                                <li><a href="http://18.189.141.222:8080/nbseschool" target="_blank">School Login</a></li><li><a href="http://18.189.141.222:8080/nbseschool" target="_blank">Student Login</a></li>
                                                 <li><a href="../registration/registration-fee.html">Registration Fees</a></li>
                                                 <li><a href="../assets/PARENT CIRCULAR (4 pgs).pdf" target="_blank">Student Registration Form</a></li>
                                                 <li><a href="/">Additional Subject</a></li>
@@ -92,7 +92,7 @@
                                                 <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
                                                 <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf"target="_blank">NBSE Admit Card </a></li>
                                                 <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">NBSE Marksheet</a></li>
-                                                <li><a href="../exam-shedule/marking-scheme.html">Marking Scheme</a></li>
+                                                <li><a href="../exam-shedule/marking-scheme.html">CBSE Marking Scheme 2019</a></li>
                                                 <li><a href="../exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
                                                 <li><a href="../exam-shedule/cbse-sample-paper.html">CBSE Sample Papers 2019</a></li>
                                             </ul>
@@ -101,8 +101,8 @@
                                             <a href="">RESULT</a>
                                             <ul class="submenu">
                                                 <li><a href="/">Result</a></li>
-                                                <li><a href="/">Re-Verification</a></li>
-                                                <li><a href="/">Re-Evaluation</a></li>
+                                                <li><a href="../results/re-verification.html">Re-Verification</a></li>
+                                                <li><a href="../results/re-evaluation.html">Re-Evaluation</a></li>
                                                 <li><a href="/">NBSE Topper Answer Sheet</a></li>
                                             </ul>
                                         </li> 
@@ -139,12 +139,8 @@
                       <h2 class="text-ceter">About NBSE</h2>  
                 </div>
                 <div class="body-title">
-                        NBSE is a panel of CBSE Experts who are having experience of creating and checking Question Papers as 
-                        per CBSE norms. NBSE conducts three sets of question papers designed for the applicants of classes 
-                        9th & 10th to give them the Realtime Experience of CBSE Board Examination. It prepares 
-                        the students to appear in CBSE Board Exams more confidently and to achieve BEST results. 
-                        NBSE conducts exams in 7 subjects i.e., English, Mathematics, Science, Social Science, Hindi A, 
-                        Hindi B and Sanskrit.    
+                    National Board of School Exam is a self autonomous, Independent Private Board of Retired Principals, Teachers & CBSE Experts. This Board is established to prepare students for Realtime Experience of CBSE Board Examinations<br>
+                    NBSE is a panel of Experts who are having experience of creating and checking Question Papers as per CBSE norms. NBSE conducts three sets of question papers designed for the applicants of classes 9th to 12th to give them the Hands on Experience before Final Board Exams. It prepares the student to appear in CBSE Board Exams more confidently and to achieve better results.    
                 </div>
             </div>
         </div>
@@ -174,7 +170,7 @@
                                                 <a href="../about/about-nbse.html">About US</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1281">
-                                                <a href="http://www.nbse.org.in/nbse_admin/" target="_blank">Registration</a>
+                                                <a href="http://18.189.141.222:8080/nbse_admin/" target="_blank">Registration</a>
                                             </li>
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1282">
                                                 <a href="../exam-shedule/exam-shedule.html">EXAM SCHEDULE</a>
@@ -191,7 +187,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <a href="../assets/nbse_android.apk" target="_blank">
+                                <a href="https://i.diawi.com/QDhtop" target="_blank">
                                     <img src="../assets/gogle_play_store.png" alt="">
                                 </a>
                             </div>
