--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <li>
                                         <a href="">RESULT</a>
                                         <ul class="submenu">
-                                            <li><a href="/">Result</a></li>
+                                            <li><a href="http://18.189.141.222:8080/nbse-result/">Result</a></li>
                                             <li><a href="results/re-verification.html">Re-Verification</a></li>
                                             <li><a href="results/re-evaluation.html">Re-Evaluation</a></li>
                                             <li><a href="/">NBSE Topper Answer Sheet</a></li>
@@ -196,8 +196,11 @@
                     </li>
                 </ul> -->
             </div>
-        </div> 
-
+        </div>
+        <br> 
+        <div class="flashMsg" style="text-align: center;">
+            <p class="blink">Student can edit/download their admitcard from Monday, 9th December, 2019.</p>
+        </div>
         <section class="flat-row padding-top">
             <div class="container">
                 <div class="row">
