--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <br> 
         <div class="flashMsg" style="text-align: center;">
             <p class="blink">Student can view their NBSE Result Now <a href="http://18.189.141.222:8080/nbse-result/" target="_blank">Click here</a></p></br>
-            <p class="blink">All The Best For Board Exam .</p>
+            <p class="blink">All The Best For Your Board Exams .</p>
         </div>
         <section class="flat-row padding-top">
             <div class="container">
